--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portafolio de Franco Chisán, estudiante de Ingeniería de Sistemas apasionado por el desarrollo de software y la innovación."
+      content="Portafolio de Franco Chihuan Sanchez, estudiante de Ingeniería de Sistemas."
     />
     <meta name="theme-color" content="#1f7fff" />
     <link
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Franco Chisán · Portafolio de Ingeniería de Sistemas</title>
+    <title>Franco Chihuan Sanchez · Portafolio de Ingeniería de Sistemas</title>
   </head>
   <body>
     <div id="root"></div>
